context api changes

--- a/city_hospital-header-inti-yup_Formik_Form_Validation/public/assets/css/style.css
+++ b/city_hospital-header-inti-yup_Formik_Form_Validation/public/assets/css/style.css
@@ -1752,3 +1752,11 @@ section {
 .main-header {
   height: 138px;
 }
+
+.Theme {
+  margin-left: 5px;
+  border: 1px solid #000;
+  background-color: #ed3c0d;
+  color: #fff;
+  border-radius: 5px;
+}
