--- a/city_hospital-header-inti-yup_Formik_Form_Validation/public/assets/css/style.css
+++ b/city_hospital-header-inti-yup_Formik_Form_Validation/public/assets/css/style.css
@@ -1760,3 +1760,13 @@ section {
   color: #fff;
   border-radius: 5px;
 }
+
+.light {
+  background-color: #fff;
+  color: #000;
+}
+
+.dark {
+  background-color:#000;
+  color: #fff;
+}
